--- a/style.css
+++ b/style.css
@@ -1,38 +1,30 @@
+/* Global Styles */
+
+* {
+  box-sizing: border-box;
+}
+
 body {
-  font-family: sans-serif;
+  font-family: 'Roboto', sans-serif;
   margin: 0;
   padding: 0;
+  background-color: #f2f2f2;
 }
 
-header {
-  background-color: #333;
-  color: white;
-  padding: 1em;
-}
-
-nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-nav li {
-  display: inline-block;
-}
-
-nav a {
-  color: white;
+a {
   text-decoration: none;
-  padding: 0.5em;
+  color: inherit;
 }
 
-section {
-  padding: 2em;
+h1 {
+  font-size: 3rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
 }
 
-section h1 {
-  font-size: 2em;
-  margin-bottom: 0.5em;
+p {
+  font-size: 1.2rem;
+  line-height: 1.5;
 }
 
 ul {
@@ -41,13 +33,14 @@ ul {
   padding: 0;
 }
 
-ul li {
-  margin-bottom: 1em;
+li {
+  margin-bottom: 1rem;
 }
 
 form label {
   display: block;
-  margin-bottom: 0.5em;
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
 }
 
 form input[type="text"],
@@ -55,19 +48,24 @@ form input[type="email"],
 form textarea {
   display: block;
   width: 100%;
-  padding: 0.5em;
-  margin-bottom: 1em;
-  border-radius: 3px;
-  border: 1px solid #ccc;
+  padding: 1rem;
+  margin-bottom: 1rem;
+  border-radius: 5px;
+  border: none;
+  background-color: #f5f5f5;
+  transition: all 0.2s ease;
+}
+
+form input[type="text"]:focus,
+form input[type="email"]:focus,
+form textarea:focus {
+  outline: none;
+  background-color: #e5e5e5;
+}
+
+form textarea {
+  height: 10rem;
 }
 
 form button[type="submit"] {
-  display: block;
-  margin-top: 1em;
-  padding: 0.5em;
-  background-color: #333;
-  color: white;
-  border: none;
-  border-radius: 3px;
-  cursor: pointer;
-}
+  display:
